# btcusdt_quant_research

./: .env.example  .gitignore  BTCUSDT_MASTER_PROMPT_FINAL_LOCKED_V6_1_REPO_FIXED.md  PROMPT.txt  README.md  SKILL.md  SKILL_FINAL_LOCKED_V6_1_REPO_FIXED.md  pyproject.toml  requirements.txt
configs/: backtest_config.yaml  candidate_activation.yaml  data.yaml  data_config.yaml  feature_config.yaml  features.yaml  future_oos.yaml  github.yaml  github_config.yaml  labeling_config.yaml  labels.yaml  model_config.yaml  models.yaml  paths.yaml  performance_gate.yaml  project.yaml  reports.yaml  risk_config.yaml  validation.yaml  validation_config.yaml
docs/: architecture.md  codex_local_development_workflow.md  colab_research_workflow.md  data_contracts.md  feature_dictionary.md  github_delivery.md  labeling_dictionary.md  model_research_protocol.md  phase1_performance_gate.md  phase1_to_phase2_transition.md  validation_protocol.md
notebooks/: 00_colab_bootstrap_and_git_sync.ipynb  00_colab_setup.ipynb  01_data_download_binance.ipynb  01_data_foundation_lab.ipynb  02_data_cleaning_and_resampling.ipynb  02_feature_label_factory_lab.ipynb  03_feature_engineering_market_structure.ipynb  03_model_training_lab.ipynb  04_feature_engineering_liquidity_ict_smc.ipynb  04_model_validation_diagnostics_lab.ipynb  05_feature_engineering_orderflow_volatility_sessions.ipynb  05_phase1_performance_package_lab.ipynb  06_labeling_and_event_generation.ipynb  07_model_training_baselines_and_ml.ipynb  08_walk_forward_validation.ipynb  09_backtesting_and_risk_management.ipynb  (+4 more)
(+119 files in other folders)
